<resources>
    <string name="app_name">Tutorial01</string>
    <string name="saludo">Hello Manuel!</string>
    <string name="user">E-mail</string>
    <string name="key">Password</string>
    <string name="enviar">Send</string>
    <string name="cambio">Enter changes</string>
    <string name="mostrar">Show Toast - Continue</string>
    <string name="sensor">Texto del sensor</string>
    <string name="encabezado">encabezado</string>
    <string name="title_activity_web_vire">WebVireActivity</string>
</resources>
